--- a/package.json
+++ b/package.json
@@ -2,5 +2,38 @@
   "name": "fintro-to-ynab-converter",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "bin": {
+    "fintrotoynab": "./dist/index.js"
+  },
+  "scripts": {
+    "dev": "ts-node src/index.ts",
+    "start": "nodemon --exec ts-node --files src/index.ts",
+    "types:sync": "yarn typesync",
+    "compile": "yarn tsc",
+    "watch": "yarn tsc --watch"
+  },
+  "devDependencies": {
+    "@types/csv-parse": "^1.1.11",
+    "@types/csv-stringify": "^1.4.2",
+    "@types/inquirer": "^0.0.43",
+    "@types/pad": "^1.0.1",
+    "nodemon": "^1.18.3",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.1",
+    "typesync": "^0.3.1"
+  },
+  "dependencies": {
+    "colors": "^1.3.2",
+    "commander": "^2.17.1",
+    "csv-generate": "^2.1.0",
+    "csv-parse": "^2.5.0",
+    "csv-stringify": "^3.1.1",
+    "inquirer": "^6.1.0",
+    "inquirer-file-path": "^1.0.1",
+    "pad": "^2.1.0",
+    "qif": "^0.0.2",
+    "stream-transform": "^1.0.2"
+  }
 }
