--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "dev": "ts-node src/index.ts",
     "start": "nodemon --exec ts-node --files src/index.ts",
     "types:sync": "yarn typesync",
+    "postinstall": "yarn typesync",
     "compile": "yarn tsc",
     "watch": "yarn tsc --watch"
   },
   "devDependencies": {
-    "@types/csv-parse": "^1.1.11",
-    "@types/csv-stringify": "^1.4.2",
     "@types/inquirer": "^0.0.43",
     "@types/pad": "^1.0.1",
+    "@types/papaparse": "^4.5.2",
     "nodemon": "^1.18.3",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
@@ -27,13 +27,11 @@
   "dependencies": {
     "colors": "^1.3.2",
     "commander": "^2.17.1",
-    "csv-generate": "^2.1.0",
-    "csv-parse": "^2.5.0",
-    "csv-stringify": "^3.1.1",
     "inquirer": "^6.1.0",
     "inquirer-file-path": "^1.0.1",
     "pad": "^2.1.0",
-    "qif": "^0.0.2",
-    "stream-transform": "^1.0.2"
+    "papaparse": "^4.6.0",
+    "promisify": "^0.0.3",
+    "qif": "^0.0.2"
   }
 }
