--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "lib": ["es2015", "es2016", "es2017", "esnext"],
+    "lib": ["es2015", "es2016", "es2017", "esnext", "dom"],
     "outDir": "./dist",
     "strict": true,
     "moduleResolution": "node",
