--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "watch": "yarn tsc --watch"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.116",
     "@types/pad": "^1.0.1",
     "@types/papaparse": "^4.5.2",
     "nodemon": "^1.18.3",
@@ -26,6 +27,8 @@
   "dependencies": {
     "colors": "^1.3.2",
     "commander": "^2.17.1",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "pad": "^2.1.0",
     "papaparse": "^4.6.0",
     "promisify": "^0.0.3",
